# funyun

./: .codacy.yml  .coveragerc  .gitignore  .landscape.yml  .travis.yml  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.rst  requirements.in  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
funyun/: __init__.py  cli.py  config.py  config_file.py  core.py  filesystem.py  logger.py  rekognizer.py
funyun/etc/: server-conf.sh  supervisord.conf
funyun/etc/conf.d/: server
funyun/etc/nginx/: nginx.conf
funyun/etc/rc.d/: server
funyun/templates/: analyze.html  index.html  recognize.html
funyun/test/: post_image.sh  post_text.sh  test_targets.sh
funyun/user_conf/: server_rc
funyun/var/html/: 404.html  50x.html  index.html
install/: 0_defs_to_source.sh  1_build_funyun.sh  2_test_rc.sh  dev_config.sh  funyun_tool.sh  my_build.sh  my_config.sh
