[metadata]
name = funyun
url = http://github.com/EagleBytes2017/funyun
author = Joel Berendzen
author_email = joelb@generisbio.com
maintainer = Joel Berendzen
maintainer_email = joelb@generisbio.com
long_description = file:README.rst
description-file =
    README.rst
    CHANGELOG.rst
keywords =
    data science
    social media
    image classification
    pet rescue
    geolocation
license = BSD 3-Clause License
license_file = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Flask
    Intended Audience :: Education
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Internet :: WWW/HTTP :: WSGI :: Server

[options]
zip_safe = False
include_package_data = True
packages = funyun
install_requires =
    arrow
    boto3
    click
    coverage
    flask-cli
    flask-dropzone
    geopy
    gunicorn
    healthcheck
    htpasswd
    piexif
    raven[flask]
    requests
    superlance
    supervisor-wildcards

[options.package_data]
* =
    *.txt
    *.rst
    *.html
    *.c
    *.faa
    *.hmm
    *.sh
    *.css
    *.js
    *.conf
    *.cfg
    favicon.ico

[wheel]
universal=1

